# MLOps-challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/routes/: api.py  predictor.py
app/core/: config.py  events.py
app/models/: prediction.py  registry.py
app/models/labels/: custom_imagenet.json
app/services/: predict.py  utils.py  validate.py
ml/models/: prediction.py
tests/: test_model_registry_integrity.py  test_pagination_behavior.py
